--- a/lc.ipynb
+++ b/lc.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "source": [
     "### Read the light curve files\n",
-    "roe_stars.parquet - Ivezek standard star light curves\n",
+    "roe_stars.parquet - Ivezek standard star SuperCOSMOS light curves\n",
     "\n",
     "wu_qso.parquet - Wu and Shen 2020 SuperCOSMOS light curves\n",
     "\n",
